⬆️ :arrow_up: Atualizando arquivos docker e settings para rodar a aplicação no docker

--- a/playlist/static/playlist.css
+++ b/playlist/static/playlist.css
@@ -9,7 +9,7 @@ h1 {
 }
 
 div {
-    background: #fff;
+    background: #cc0d0d;
     padding: 20px;
     margin-bottom: 20px;
     border-radius: 5px;
