--- a/playlist/templates/search.html
+++ b/playlist/templates/search.html
@@ -4,38 +4,57 @@
 <div class="search-container">
     <h2>Search Movies</h2>
     <form method="get" action="{% url 'search' %}">
-        <input type="text" name="query" placeholder="Search for movies..." value="{{ query }}">
-        <button type="submit"><i class="fas fa-search"></i></button>
+        <input type="text" name="query" placeholder="Search for movies..." value="{{ query }}" required>
+        <button type="submit"><i class="fas fa-search"></i> Search</button>
     </form>
 
     {% if search_results %}
     <div class="search-results">
         {% for movie in search_results %}
         <div class="movie-card">
-            {% if movie.poster %}
+            {% if movie.poster and movie.poster != 'N/A' %}
             <img src="{{ movie.poster }}" alt="{{ movie.title }} Poster" class="movie-poster">
+            {% else %}
+            <div class="poster-placeholder">
+                <i class="fas fa-film"></i>
+            </div>
             {% endif %}
+            
             <div class="movie-info">
                 <h3>{{ movie.title }} ({{ movie.year }})</h3>
-                <p class="director">{{ movie.director }}</p>
-                <p class="plot">{{ movie.plot|truncatewords:30 }}</p>
-                <form action="{% url 'add_movie' 'watchlist' %}" method="post">
-                    {% csrf_token %}
-                    <input type="hidden" name="imdb_id" value="{{ movie.imdb_id }}">
-                    <button type="submit" class="add-btn">
-                        <i class="fas fa-plus"></i> Add to Watchlist
-                    </button>
-                </form>
-                <form action="{% url 'add_movie' 'liked' %}" method="post">
-                    {% csrf_token %}
-                    <input type="hidden" name="imdb_id" value="{{ movie.imdb_id }}">
-                    <button type="submit" class="add-btn">
-                        <i class="fas fa-heart"></i> Add to Liked
-                    </button>
-                </form>
+                
+                {% if movie.director and movie.director != 'N/A' %}
+                <p class="director">Directed by {{ movie.director }}</p>
+                {% endif %}
+                
+                {% if movie.plot and movie.plot != 'N/A' %}
+                <p class="plot">{{ movie.plot }}</p>
+                {% endif %}
+                
+                <div class="action-buttons">
+                    <form action="{% url 'add_movie' 'watchlist' %}" method="post">
+                        {% csrf_token %}
+                        <input type="hidden" name="imdb_id" value="{{ movie.imdb_id }}">
+                        <button type="submit" class="add-btn">
+                            <i class="fas fa-plus"></i> Watchlist
+                        </button>
+                    </form>
+                    
+                    <form action="{% url 'add_movie' 'liked' %}" method="post">
+                        {% csrf_token %}
+                        <input type="hidden" name="imdb_id" value="{{ movie.imdb_id }}">
+                        <button type="submit" class="add-btn">
+                            <i class="fas fa-heart"></i> Liked
+                        </button>
+                    </form>
+                </div>
             </div>
         </div>
         {% endfor %}
+    </div>
+    {% elif query %}
+    <div class="no-results">
+        <p>No movies found for "{{ query }}"</p>
     </div>
     {% endif %}
 </div>
