--- a/playlist/templates/main_menu.html
+++ b/playlist/templates/main_menu.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="main-menu">
-    <h1>Welcome to MoviePlay</h1>
+    <h1>Bem-vindo ao MoviePlay</h1>
     <div class="menu-options">
         <a href="{% url 'watchlist' %}" class="menu-btn">
             <i class="fas fa-bookmark"></i>
