:arrow_up: Atualizando lógica do views.py e alterando funcionalidades em templates

--- a/playlist/templates/movie_detail.html
+++ b/playlist/templates/movie_detail.html
@@ -12,6 +12,8 @@
     {% endif %}
     <p><strong>Director:</strong> {{ movie.director }}</p>
     <p><strong>Plot:</strong> {{ movie.plot }}</p>
+    <button onclick="window.history.back()">Voltar</button>
+
     <a href="{% url 'main_menu' %}" class="back-btn">Back to Menu</a>
 </div>
 {% endblock %}
