--- a/playlist/templates/base.html
+++ b/playlist/templates/base.html
@@ -3,13 +3,13 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Movie Playlists</title>
+    <title>MovieList</title>
     <link rel="stylesheet" href="{% static 'playlist.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <nav class="navbar">
-        <a href="{% url 'main_menu' %}" class="logo">MoviePlay</a>
+        <a href="{% url 'main_menu' %}" class="logo">MovieList</a>
         <div class="nav-links">
             <a href="{% url 'watchlist' %}">Watchlist</a>
             <a href="{% url 'liked' %}">Liked Movies</a>
